# plugin-peak-shape

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
scripts/: build.ps1  deploy.ps1
src/: __init__.py  config.py  logger.py
src/dto/: data.py
src/interfaces/: callbacks.py
src/interfaces/gui/: app.py
src/interfaces/gui/windows/: progress_window.py
src/managers/data_manager/: data_manager.py  exceptions.py
src/managers/data_manager/parsers/: atom_data_parser.py  atom_meta_parser.py  atom_spectra_parser.py  filepath_parser.py  utils.py
src/managers/report_manager/: __init__.py  exceptions.py  report_manager.py
src/managers/shape_manager/: __init__.py  _core.py  exceptions.py  shape_manager.py
src/plugin/: __init__.py  exceptions.py  loggers.py  plugin.py
src/plugin/api/view/: app.py
src/plugin/api/view/windows/: __init__.py  view_window.py
src/plugin/config/: __init__.py  config.py  draft_peak_config.py  parsers.py  plugin_config.py  restore_shape_config.py  utils.py
src/plugin/dto/: data.py
src/plugin/interfaces/: callbacks.py
src/plugin/interfaces/gui/: __init__.py  app.py
src/plugin/interfaces/gui/windows/: __init__.py  progress_window.py
src/plugin/managers/data_manager/: data_manager.py  exceptions.py
src/plugin/managers/data_manager/parsers/: atom_data_parser.py  atom_meta_parser.py  atom_spectra_parser.py  filepath_parser.py  utils.py
src/plugin/managers/report_manager/: exceptions.py  report_manager.py
src/plugin/managers/shape_manager/: _core.py  core.py  exceptions.py  shape_manager.py
src/plugin/presentation/: __init__.py  app.py  callbacks.py
src/plugin/presentation/view_model/: __init__.py  app.py  shared_queue.py
src/plugin/presentation/view_model/windows/: __init__.py  observability_window.py  progress_bar_window.py  progress_window.py  viewer_window.py
src/plugin/presentation/windows/: __init__.py  preview_window.py  progress_window.py
