[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peak-shape-plugin"
version = "0.3.3"
description = "Atom plugin to retrieve peak's shape."
readme = "README.md"
keywords = [
    "spectroscopy",
    "atomic emission spectroscopy",
    "peak shape profile",
    "linear detector",
]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
license = {text = "MIT License"}
dependencies = [
    "pydantic==2.11.1",
    "pydantic-settings==2.8.1",
    "pyside6==6.8.1",
    "setuptools>=75.8.0",
    "spectrumapp",
    "spectrumlab-tiny",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
]
notebook = [
    "jupyter>=1.1.1",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
    {include-group = "notebook"},
    "pre-commit>=4.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt", "*.xml"]

[tool.uv.sources]
spectrumlab-tiny = { git = "https://github.com/Exinker/spectrumlab-tiny", rev = "ef3134a" }
spectrumapp = { git = "https://github.com/Exinker/spectrumapp", rev = "master" }
