[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin"
version = "1.0.0a"
description = "Atom plugin to retrieve peak's shape."
readme = "README.md"
keywords = [
    "spectroscopy",
    "atomic emission spectroscopy",
    "peak shape profile",
    "linear detector",
]
authors = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
maintainers = [
    {name = "Pavel Vaschenko", email="vaschenko@vmk.ru"},
]
license = {text = "MIT License"}
dependencies = [
    "spectrumapp",
    "spectrumlab",
]
requires-python = ">=3.12"

[dependency-groups]
linting = [
    "flake8",
    "flake8-commas",
    "flake8-import-order",
    "flake8-bugbear",
    "flake8-builtins",
    "pep8-naming",
]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-faker>=2.0.0",
    "pytest-repeat>=0.9.4",
    "pytest-qt>=4.5.0",
    "spectrumlab_emulations",
]
notebook = [
    "jupyter>=1.1.1",
]
dev = [
    {include-group = "linting"},
    {include-group = "testing"},
    {include-group = "notebook"},
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.md", "*.txt", "*.xml"]

[tool.uv.sources]
spectrumapp = { git = "https://github.com/Exinker/spectrumapp", rev = "master" }
spectrumlab = { git = "https://github.com/Exinker/spectrumlab", rev = "0.9.0" }
spectrumlab_emulations = { git = "https://github.com/Exinker/spectrumlab-emulations", rev = "0.1.2" }
